BH several major changes in implementation: 1. Exception handling is now using single-loop scopes with break statements instead of longjmps - which do not do stack unwinding. real loop breaking is therefore done with BREAK. 2. in vTable: pointer to function not used. instead using func. struct per function def that includes inner impl and outer impl, where outer impl is functor that retrieves the inner impl of the deriving class, which has the same signature. this way type safety and hints are now available for func. calls (and were missing before with the generic func type) 3. for 'classless functions' we use DECL_FUN for def and IMPL_FUN ... END_FUN for impl. it take cares of scopes and exception handling.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /UnitTests/x64/Debug
 /COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.user
 /UnitTests/UnitTests.vcxproj.user
+/UnitTests/x64/Release
+/COOP_C_TestProxy/x64/Release
