cosmetics, added Rectangle class from github wiki
Former-commit-id: e506ab433cf74c312daf618060449843ae130a40

--- a/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj
+++ b/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="ExeptionUnitTest.c" />
     <ClCompile Include="InheritTest.c" />
     <ClCompile Include="MemManagementUnitTest.c" />
+    <ClCompile Include="Rectangle.c" />
     <ClCompile Include="ScopesUnitTest.c" />
     <ClCompile Include="ScopeTester.c" />
   </ItemGroup>
@@ -36,6 +37,7 @@
     <ClInclude Include="InheritTest.h" />
     <ClInclude Include="MemManagementUnitTest.h" />
     <ClInclude Include="ProxyExportDefs.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="ScopesUnitTest.h" />
     <ClInclude Include="ScopeTester.h" />
   </ItemGroup>
