--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -51,6 +51,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Scopes_UnitTest.cpp" />
+    <ClCompile Include="vectorUnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
