--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -9,6 +9,7 @@
       <Filter>misc</Filter>
     </ClCompile>
     <ClCompile Include="Class_UnitTest.cpp" />
+    <ClCompile Include="vectorUnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="misc">
