added shared_ptr class to COOP
Former-commit-id: 3ac0e5503d390fa32ecb9c418556c28aae81bf9f

--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -152,6 +152,8 @@
     <ClInclude Include="object.h" />
     <ClInclude Include="obj_base_structs.h" />
     <ClInclude Include="obj_lifecycle_management.h" />
+    <ClInclude Include="Shared_ptr.h" />
+    <ClInclude Include="Vector.h" />
     <ClInclude Include="virtual_func_calling.h" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +163,8 @@
     <ClCompile Include="iCache.c" />
     <ClCompile Include="MemoryManager.cpp" />
     <ClCompile Include="obj_lifecycle_management.c" />
+    <ClCompile Include="Shared_ptr.c" />
+    <ClCompile Include="Vector.c" />
     <ClCompile Include="virtual_func_calling.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
