--- a/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj
+++ b/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Rectangle.c" />
     <ClCompile Include="ScopesUnitTest.c" />
     <ClCompile Include="ScopeTester.c" />
+    <ClCompile Include="vectorIteratorUnitTest.c" />
     <ClCompile Include="vectorUnitTest.c" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +42,7 @@
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="ScopesUnitTest.h" />
     <ClInclude Include="ScopeTester.h" />
+    <ClInclude Include="vectorIteratorUnitTest.h" />
     <ClInclude Include="vectorUnitTest.h" />
   </ItemGroup>
   <ItemGroup>
