--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -10,6 +10,7 @@
     </ClCompile>
     <ClCompile Include="Class_UnitTest.cpp" />
     <ClCompile Include="vectorUnitTest.cpp" />
+    <ClCompile Include="vectorIteratorUnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="misc">
