--- a/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.filters
+++ b/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.filters
@@ -31,6 +31,13 @@
     <ClCompile Include="vectorUnitTest.c">
       <Filter>Class Tests</Filter>
     </ClCompile>
+    <ClCompile Include="TypeTest.c">
+      <Filter>ScopeTesting</Filter>
+    </ClCompile>
+    <ClCompile Include="ClassTest.c" />
+    <ClCompile Include="CharTest.c">
+      <Filter>ScopeTesting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyExportDefs.h" />
@@ -63,6 +70,13 @@
     </ClInclude>
     <ClInclude Include="vectorUnitTest.h">
       <Filter>Class Tests</Filter>
+    </ClInclude>
+    <ClInclude Include="TypeTest.h">
+      <Filter>ScopeTesting</Filter>
+    </ClInclude>
+    <ClInclude Include="ClassTest.h" />
+    <ClInclude Include="CharTest.h">
+      <Filter>ScopeTesting</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
