start working with tests
Former-commit-id: 07edb43b00b9b84f75ce164391c472c9582d4113

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 ################################################################################
 # Sub-projects
 ################################################################################
-add_subdirectory(Catch2UnitTests)
+#add_subdirectory(Catch2UnitTests)
 add_subdirectory(COOP)
 #add_subdirectory(COOP_C_TestProxy)
 # add_subdirectory(UnitTests)
