--- a/UnitTestC/UnitTestC.vcxproj.filters
+++ b/UnitTestC/UnitTestC.vcxproj.filters
@@ -18,12 +18,24 @@
     <ClCompile Include="ClassTest.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InheritTest.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="runTest.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="test_defs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InheritTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="runTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
