--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -141,11 +141,15 @@
   <ItemGroup>
     <ClCompile Include="ClassTest.c" />
     <ClCompile Include="InheritTest.c" />
+    <ClCompile Include="rbTreeIterUnitTest.c" />
+    <ClCompile Include="rbTreeUnitTest.c" />
     <ClCompile Include="runTest.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassTest.h" />
     <ClInclude Include="InheritTest.h" />
+    <ClInclude Include="rbTreeIterUnitTest.h" />
+    <ClInclude Include="rbTreeUnitTest.h" />
     <ClInclude Include="runTest.h" />
     <ClInclude Include="test_defs.h" />
   </ItemGroup>
