--- a/UnitTestC/UnitTestC.vcxproj.filters
+++ b/UnitTestC/UnitTestC.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="runTest.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rbTreeIterUnitTest.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rbTreeUnitTest.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassTest.h">
@@ -36,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="runTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rbTreeIterUnitTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rbTreeUnitTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
