--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -141,18 +141,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ClassTest.c" />
+    <ClCompile Include="ExeptionUnitTest.c" />
     <ClCompile Include="InheritTest.c" />
+    <ClCompile Include="MemManagementUnitTest.c" />
     <ClCompile Include="rbTreeIterUnitTest.c" />
     <ClCompile Include="rbTreeUnitTest.c" />
     <ClCompile Include="runTest.c" />
+    <ClCompile Include="vectorIteratorUnitTest.c" />
+    <ClCompile Include="vectorUnitTest.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassTest.h" />
+    <ClInclude Include="ExeptionUnitTest.h" />
     <ClInclude Include="InheritTest.h" />
+    <ClInclude Include="MemManagementUnitTest.h" />
     <ClInclude Include="rbTreeIterUnitTest.h" />
     <ClInclude Include="rbTreeUnitTest.h" />
     <ClInclude Include="runTest.h" />
     <ClInclude Include="test_defs.h" />
+    <ClInclude Include="vectorIteratorUnitTest.h" />
+    <ClInclude Include="vectorUnitTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\COOP\COOP.vcxproj">
