--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -177,6 +177,9 @@
     <ClCompile Include="vectorIterator.c" />
     <ClCompile Include="virtual_func_calling.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
