added tests for hashTable+
Former-commit-id: b8bacaee50a53dce2aa31d849565044aacfe09b5

--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="ClassTest.c" />
     <ClCompile Include="ClassTestC.c" />
     <ClCompile Include="ExeptionUnitTest.c" />
+    <ClCompile Include="HashTableUnitTest.c" />
     <ClCompile Include="InheritTest.c" />
     <ClCompile Include="MemManagementUnitTest.c" />
     <ClCompile Include="rbTreeIterUnitTest.c" />
@@ -159,6 +160,7 @@
     <ClInclude Include="ClassTest.h" />
     <ClInclude Include="ClassTestC.h" />
     <ClInclude Include="ExeptionUnitTest.h" />
+    <ClInclude Include="HashTableUnitTest.h" />
     <ClInclude Include="InheritTest.h" />
     <ClInclude Include="MemManagementUnitTest.h" />
     <ClInclude Include="rbTreeIterUnitTest.h" />
